Intermediate commit (fixes after rework to Promises)