@@ -9,7 +9,6 @@ import java.nio.charset.StandardCharsets;
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -40,7 +39,7 @@ public class ArrayConversionsTest {
     }
 
     private Row getRow() {
-        return dbr.query("SELECT * FROM CA_TEST").index(0);
+        return dbr.query("SELECT * FROM CA_TEST").unwrap().index(0);
     }
 
     @Test
@@ -138,102 +137,133 @@ public class ArrayConversionsTest {
         assertArrayEquals(null, getRow().getArray("texta", String[].class));
     }
 
+    @SuppressWarnings("deprecation")
     @Test
     public void selectNestedInt() {
-        Integer[][] a = new Integer[][]{
+        var a = new Integer[][]{
                 new Integer[]{1, 2, 3},
                 new Integer[]{4, 5, 6}
         };
+
         dbr.query("INSERT INTO CA_TEST (INTA) VALUES ($1)", List.of(new Object[]{a}));
+
         assertArrayEquals(
                 a,
                 dbr.query(
                         "SELECT INTA FROM CA_TEST WHERE INTA = $1",
-                        List.of(new Object[]{a})).index(0).getArray("inta", Integer[].class));
+                        List.of(new Object[]{a})).unwrap().index(0).getArray("inta", Integer[].class));
     }
 
+    @SuppressWarnings("deprecation")
     @Test
     public void selectUTF8() {
-        String[] a = new String[]{"U&\"d\\0061t\\+000061\"", "d\u0061t\u0061"};
+        var a = new String[]{"U&\"d\\0061t\\+000061\"", "d\u0061t\u0061"};
+
         dbr.query("INSERT INTO CA_TEST (TEXTA) VALUES ($1)", List.of(new Object[]{a}));
+
         assertArrayEquals(
                 a,
                 dbr.query(
                         "SELECT TEXTA FROM CA_TEST WHERE TEXTA = $1",
-                        List.of(new Object[]{a})).index(0).getArray("texta", String[].class));
+                        List.of(new Object[]{a})).unwrap().index(0).getArray("texta", String[].class));
     }
 
+    @SuppressWarnings("deprecation")
     @Test
     public void selectUnboxed() {
-        short[][] a = new short[][]{new short[]{0, 1}, new short[]{1, 0}};
+        var a = new short[][]{new short[]{0, 1}, new short[]{1, 0}};
+
         dbr.query("INSERT INTO CA_TEST (INTA) VALUES ($1)", List.of(new Object[]{a}));
+
         assertEquals(
                 1,
                 dbr.query(
                         "SELECT INTA FROM CA_TEST WHERE INTA = $1",
-                        List.of(new Object[]{a})).size());
+                        List.of(new Object[]{a})).unwrap().size());
     }
 
+    @SuppressWarnings("deprecation")
     @Test
     public void implicitGet() {
         dbr.query("INSERT INTO CA_TEST (INTA) VALUES ('{1, 2, 3}')");
-        PgRow row = (PgRow) dbr.query("SELECT * FROM CA_TEST").index(0);
+
+        var row = (PgRow) dbr.query("SELECT * FROM CA_TEST").unwrap().index(0);
+
         assertArrayEquals(new Integer[]{1, 2, 3}, (Object[]) row.get("inta"));
     }
 
+    @SuppressWarnings("deprecation")
     @Test
     public void shouldRoundTripTimestamp() {
-        List<Timestamp[]> params = new ArrayList<>(1);
-        params.add(new Timestamp[]{new Timestamp(12345679), new Timestamp(12345678)});
+        var params = List.<Timestamp[]>of(new Timestamp[] { new Timestamp(12345679), new Timestamp(12345678) } );
+
         dbr.query("INSERT INTO CA_TEST (TIMESTAMPA) VALUES ($1)", params);
-        Row row = dbr.query("SELECT TIMESTAMPA FROM CA_TEST WHERE TIMESTAMPA = $1", params).index(0);
-        assertArrayEquals(params.get(0), row.getArray(0, Timestamp[].class));
+
+        var row = dbr.query("SELECT TIMESTAMPA FROM CA_TEST WHERE TIMESTAMPA = $1", params).unwrap().index(0);
+
+        assertArrayEquals(params.getFirst(), row.getArray(0, Timestamp[].class));
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void shouldNotAllowPrimitiveArrays() {
         dbr.query("INSERT INTO CA_TEST (LONGA) VALUES ('{-1, null, 1, 2, 3}')");
+
         getRow().getArray("longa", long[].class);
     }
 
     @Test
     public void shouldAllowPrimitiveArrayParameters() {
-        long[] input = {1L, 2L, 3L};
+        var input = new long[]{1L, 2L, 3L};
+
         dbr.query("INSERT INTO CA_TEST (LONGA) VALUES ($1)", List.of(input));
-        Long[] output = getRow().getArray("longa", Long[].class);
+
+        var output = getRow().getArray("longa", Long[].class);
+
         for (int i = 0; i < input.length; i++) {
             assertEquals(input[i], output[i].longValue());
         }
     }
 
+    @SuppressWarnings("deprecation")
     @Test
     public void shouldParseUnquotedStringsCorrectly() {
-        String[] values = new String[]{"NotNull", "NULLA", "string", null};
+        var values = new String[]{"NotNull", "NULLA", "string", null};
+
         dbr.query("INSERT INTO CA_TEST (TEXTA) VALUES($1)", Collections.singletonList(values));
-        Row row = dbr.query("SELECT * FROM CA_TEST").index(0);
+
+        var row = dbr.query("SELECT * FROM CA_TEST").unwrap().index(0);
+
         assertArrayEquals(values, row.getArray("texta", String[].class));
     }
 
+    @SuppressWarnings("deprecation")
     @Test
     public void shouldParseNullTextCorrectly() {
-        String[] values = new String[]{"NULL", null, "string"};
+        var values = new String[]{"NULL", null, "string"};
+
         dbr.query("INSERT INTO CA_TEST (TEXTA) VALUES($1)", Collections.singletonList(values));
-        Row row = dbr.query("SELECT * FROM CA_TEST").index(0);
+
+        var row = dbr.query("SELECT * FROM CA_TEST").unwrap().index(0);
+
         assertArrayEquals(values, row.getArray("texta", String[].class));
     }
 
+    @SuppressWarnings("deprecation")
     @Test
     public void shouldBindArrayOfByteA() {
-        byte[][] bb = new byte[3][];
+        var bb = new byte[3][];
         bb[0] = "blob 0 content".getBytes(StandardCharsets.UTF_8); // UTF-8 is hard coded here only because the ascii compatible data
         bb[1] = "blob 1 content".getBytes(StandardCharsets.UTF_8); // UTF-8 is hard coded here only because the ascii compatible data
         bb[2] = "blob 2 content".getBytes(StandardCharsets.UTF_8); // UTF-8 is hard coded here only because the ascii compatible data
+
         dbr.query("INSERT INTO CA_TEST(BYTEAA) VALUES ($1)", Collections.singletonList(bb));
-        byte[][] readbb = dbr.query("SELECT BYTEAA FROM CA_TEST WHERE BYTEAA = $1", Collections.singletonList(bb)).index(0).getArray(0, byte[][].class);
+
+        var readbb = dbr.query("SELECT BYTEAA FROM CA_TEST WHERE BYTEAA = $1", Collections.singletonList(bb))
+                        .unwrap().index(0).getArray(0, byte[][].class);
+
         assertEquals(bb.length, readbb.length);
         assertArrayEquals(bb[0], readbb[0]);
         assertArrayEquals(bb[1], readbb[1]);
         assertArrayEquals(bb[2], readbb[2]);
     }
-
 }
